test/sema/traits/trait_requirement_not_implemented_generic_type_param.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B<T> {}

trait A<T> : B<T> {}

struct S<X> {
    // CHECK: [[# @LINE + 1 ]]:10: error: implementing trait 'A<X>' requires implementing trait 'B<X>'
    impl A<X>;
}

fn main() {}
